; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_presets.c_write_config_file.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_presets.c_write_config_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"%s/%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @write_config_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_config_file(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = call i32* @ghb_get_user_config_dir(i32* null)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32* @g_strdup_printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32* %8, i32* %9)
  store i32* %10, i32** %6, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @g_free(i32* %11)
  %13 = load i32*, i32** %6, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @ghb_json_write_file(i32* %13, i32* %14)
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @g_free(i32* %16)
  ret void
}

declare dso_local i32* @ghb_get_user_config_dir(i32*) #1

declare dso_local i32* @g_strdup_printf(i8*, i32*, i32*) #1

declare dso_local i32 @g_free(i32*) #1

declare dso_local i32 @ghb_json_write_file(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
